# Demnok

./: .gitignore  README.md  pyproject.toml  rag.py  rag_bedrock.py  rag_nerif.py  rag_test.sh  requirements.txt
agents/: embedding_agent.py
api_prototype/: rag_bedrock.py  rag_nerif.py
ci_pipeline/: index.sh  q_dist.py  reader.py  retrieve.py  splitter.py  vec.sh  vec_dist.py
data/: download_msq.py  download_nrtv.py
datasets/multihopRAG/top15/: top15_baseline_prompts.jsonl  top15_prompts.jsonl
demnok/: __init__.py  tools.py
demnok/agents/: __init__.py  chatting_agent.py  embedding_agent.py
demnok/core/: __init__.py  prompt_templates.py  rag.py
demnok/engines/: __init__.py  faiss_rag.py  qdrant_rag.py
demnok/offline/: topk.py
demnok/utils/: __init__.py  clustering.py  clustering_cu.py  data_chunking.py  generate_prompt.py  storage_solver.py
estimate/: aws_lambda.py  knn_cost.py  rag_cache.ipynb  rag_cache.py  sglang_test.py
local_prototype/: rag_cot.py
tests/: chat_test.py  chunk_test.py  rag_faiss.py  rag_test.py  ragchecker_test.py  rat_test.py
