[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demnok"
version = "0.0.1"
description = "Retrieval Augmented CoT Generation"
readme = "README.md"
authors = [{ name = "Yinsicheng Jiang" }, { name = "Chivier Humber" }]
license = { text = "MIT" }

keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "nerif",
    "datasets",
    "qdrant-client",
    "boto3",
    "transformers",
    "torch",
    "torchaudio",
    "torchvision",
    "accelerate"
]
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "ipython"]

[project.urls]
Homepage = "https://github.com/Chivier/Demnok"

[tool.bumpver]
current_version = "0.7.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88